# credrail-recon-test

./: Makefile  README.md  pyproject.toml  requirements.txt
cred_csv/: fake-csv.py  recon.py  reconciler.py
cred_csv/data/: output.csv
tests/: test_recon.py
