[tool.poetry]
name = "cred-csv"
version = "0.1.0"
description = ""
authors = ["akeebismail <ismailakeeb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
faker = "^25.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
